tests/regression/error/no_pattern.smt2
(declare-sort P 0)
(declare-fun % (P) Int)
(declare-sort T 0)
(declare-const N T)
(declare-sort D 0)
(declare-fun h (P T) Bool)
(declare-fun v (D T P) Int)
(declare-const & D)
(declare-const s P)
(declare-fun %% (T) P)
(assert (forall ((le T)) (! (not (exists ((i P)) (! (h i le) :pattern () :pattern ()))) :pattern ((%% le)))))
(assert (h s N))
(assert (= 0 (% (%% N))))
(check-sat)
